--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_00"
-author: "Your Name here"
-date: "Year 2020"
+author: "Sierra Lander"
+date: "05/23/24"
 output: html_document
 ---
 
